# xebia-email-signature

./: .buildspec.yaml  .dockerignore  .gitignore  .release  Dockerfile  Makefile  Makefile.image  Pipfile  README.md  example.html  requirements.txt  setup.cfg  signature.py  signature.tpl  signature_oblcc.tpl
.github/workflows/: push-to-registry.yaml
cloudformation/: certificate.yaml  cicd-pipeline.yaml  xebia-email-signature.yaml
src/app_runner_custom_domain_resource_provider/: __init__.py
src/xebia_email_signature/: __init__.py  __main__.py  gravatar.py  inline_images.py  new_signature.py  office.py  old_signature.py  serve.py  signature.py
src/xebia_email_signature/static/: base64-images.json  offices.json  scripts-analytics.js  scripts-new.js  scripts-v3.js  scripts.js  styles-new.css  styles.css
src/xebia_email_signature/templates/: form.html  form_v1.html  form_v2.html  form_v3.html  new_form.html  new_signature.html.jinja  old_form.html  old_signature.html.jinja  old_signature.xpirit.html.jinja  signature-mobile-native-ios.html.jinja  signature-mobile-outlook-and.html.jinja  signature-mobile-outlook-ios.html.jinja  signature-native-mac.eml.jinja  signature-native-mac.html.jinja  signature-native-win.html.jinja  signature-outlook-mac-legacy.html.jinja  signature-outlook-mac.html.jinja  signature-outlook-new-mac.html.jinja  signature-outlook-new-win.html.jinja  signature-outlook-win-legacy.html.jinja  signature-outlook-win.html.jinja  signature.html.jinja  signature.tpl  signature.xpirit.html.jinja  simple-signature.html.jinja  simple-signature.tpl  wrong_client.html
tests/: test_inline_images.py  test_signature.py
tests/custom_resource/: base.py  test_custom_resource.py
tests/custom_resource/call_00001_associate_custom_domain/: __init__.py
tests/custom_resource/call_00002_describe_custom_domains/: __init__.py
tests/custom_resource/call_00003_describe_custom_domains/: __init__.py
tests/custom_resource/call_00004_describe_custom_domains/: __init__.py
tests/custom_resource/call_00005_associate_custom_domain/: __init__.py
tests/custom_resource/call_00006_describe_custom_domains/: __init__.py
tests/custom_resource/call_00007_describe_custom_domains/: __init__.py
(+4 files in other folders)
