[metadata]
name = xebia-email-signature
version = 0.0.0
author = Steyn Huizinga
url = https://github.com/OblivionCloudControl/xebia-email-signature
author_email = steyn.huizinga@xebia.com
description = Generates a Xebia email signature
long_description = file: README.md
long_description_content_type = text/markdown

test_suite = tests
tests_require = pytest
license = BSD 3-Clause License
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
  flask
  Jinja2
  MarkupSafe
  pytidylib
  phonenumbers

use_scm_version = True

[options.package_data]
xebia_email_signature.templates =
  *

[options.packages.find]
where=
  src
