[metadata]
name = xebia-email-signature
version = 0.0.0
author = Steyn Huizinga
url = https://github.com/OblivionCloudControl/xebia-email-signature
author_email = steyn.huizinga@xebia.com
description = Generates a Xebia email signature
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD 3-Clause License
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages = find_namespace:
zip_safe = True
include_package_data = True
install_requires =
  flask
  Jinja2
  MarkupSafe
  pytidylib
  phonenumbers

use_scm_version = True

[options.package_data]
xebia_email_signature.templates =
  *
xebia_email_signature.static =
  *

[options.packages.find]
where=
  src

[tox:tox]
min_version = 4.0
env_list =
  py39
  type
isolated_build = true
skip_missing_interpreters = true

[testenv]
commands = python -m unittest discover -s tests

deps =
  boto3
  botocore-stubber-recorder
  jsonschema

;[testenv:type]
;commands = mypy src
;deps = mypy
